fixed dashboard spacing problem

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -7,25 +7,27 @@
 
 .employer-content {
   margin-top: 16px !important;
-  margin-left: 200px !important;
+  overflow: scroll;
 }
 
 @media screen and (min-width: 1281px) {
   .employer-content {
-    margin-left: 400px !important;
+
   }
 }
 
 @media screen and (min-width: 1600px) {
   .employer-content {
-    margin-left: 600px !important;
+
   }
 }
 
 
+
 /* On screens that are 600px or less, set the background color to olive */
-@media screen and (max-width: 600px) {
-  .employer-content {
-    margin-left: 200px !important;
+@media screen and (max-width: 1000px) {
+  .dash-container {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
